# HexEngine

./: .gitignore  CMakeLists.txt  HexEngine.slnx  build.bat  premake5.lua
HexEngine/: CMakeLists.txt  HexEngine.vcxproj  HexEngine.vcxproj.filters
HexEngine/src/: Hex.h
HexEngine/src/Hex/: App.cpp  App.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Sandbox.cpp
